# git_log_to_excel

./: .gitignore  pyproject.toml  test.ipynb
src/git_log_to_excel/: __init__.py
